[package]
name = "service_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
color-eyre = "0.6.3"
crossterm = "0.27.0"
lazy_static = "1.5.0"
libc = "0.2.155"
ratatui = { version = "0.27.0", features = ["crossterm"] }



[build-dependencies]
cc = "1.1.5"
pkg-config = "0.3.30"
